# hosted-resumes.com

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  drizzle.config.ts  package.json  pnpm-lock.yaml  shell.nix  vite.config.ts
.finna/: consensus.json  roadmap.arf
.finna/specs/01-scaffold-sveltekit/: spec.arf
.finna/specs/02-docker-compose-dev/: spec.arf
.finna/specs/03-database-schema/: spec.arf
.finna/specs/04-db-client/: spec.arf
.finna/specs/05-jobl-schema/: spec.arf
.finna/specs/06-auth-foundation/: spec.arf
.finna/specs/07-host-header-routing/: spec.arf
.finna/specs/08-marketing-pages/: spec.arf
.finna/specs/09-app-layout-dashboard/: spec.arf
.finna/specs/10-resume-crud-api/: spec.arf
.finna/specs/11-theme-components/: spec.arf
.finna/specs/12-resume-editor/: spec.arf
.finna/specs/13-live-preview/: spec.arf
.finna/specs/14-tenant-subdomain-pages/: spec.arf
.finna/specs/15-s3-uploads/: spec.arf
.finna/specs/16-pdf-service/: spec.arf
.github/workflows/: deploy.yml
deploy/: Caddyfile  Caddyfile.dev  DNS_SETUP.md  caddy.env.example
drizzle/: 0000_nervous_metal_master.sql  0001_sudden_taskmaster.sql  0002_shallow_red_hulk.sql  0003_short_human_cannonball.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  _journal.json
migrations/: 002_subscriptions.sql
pdf-service/: Cargo.toml  Dockerfile
pdf-service/src/: main.rs
scripts/: migrate.ts
src/: app.d.ts  hooks.server.ts  hooks.ts
src/lib/: export-pdf.ts  repo-sync.ts  tier.test.ts  tier.ts
(+77 files in other folders)
